# qwopus

./: .gitignore  EVALUATION.md  LICENSE  README.md  pyproject.toml  qwopus  run_qwopus.py  setup.sh
harness/: __main__.py  cli.py  commands.py  config.py  engine.py  gpu.py  hooks.py  indexer.py  models.py  permissions.py  runtime.py  search.py  session.py  tools.py  ui.py  web.py
