[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwopus"
version = "0.1.0"
description = "Local AI coding agent powered by Qwen3.5-27B-Claude-4.6-Opus-Reasoning-Distilled"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "llama-cpp-python>=0.3.0",
    "huggingface_hub>=0.20.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "duckduckgo-search>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
cuda = []  # CUDA build handled separately via CMAKE_ARGS

[project.scripts]
qwopus = "harness.cli:main"

[tool.setuptools.packages.find]
include = ["harness*"]
